fix unwanted horizontal scrollbar

--- a/redakcja/static/css/base.css
+++ b/redakcja/static/css/base.css
@@ -13,6 +13,12 @@
     color: #333;
 }
 
+.jumbotron {
+    margin-top: -20px;
+    margin-left: -15px;
+    margin-right: -15px;
+    border-radius: 0 !important;
+}
 
 
 
